# rp2040-doom-PicoLCD

./: .gitignore  README.md  TODO.md  build.sh  host_build.sh  rebuild_rp2040.sh
opl/: CMakeLists.txt
src/: CMakeLists.txt  i_input.c  i_main.c  i_video.c  i_video.h  m_controls.c  pd_render.cpp
src/doom/: d_main.c  m_menu.c
src/hagl_hal/: mipi_display.c
src/hagl_hal/include/: hagl_hal.h
src/pico/: CMakeLists.txt  i_input.c  i_system.c  i_video.c  screen.c  screen.h  video_doom.pio
src/pico/pico-screens/: screen.c
src/pico/pico-screens/screens/: lilygo_ttgo.c  lilygo_ttgo.h  shared.c  shared.h  ssd1306_70_40.cpp  ssd1306_70_40.hpp  ssd1306_70_40_i2c.c  ssd1306_70_40_i2c.h  st7735_128_128.c  st7735_128_128.h  st7789_240_135.c  st7789_240_135.h
src/pico_ssd1306/: CMakeLists.txt
src/pico_ssd1306/src/: ssd1306.cpp
src/pico_ssd1306_i2c/: CMakeLists.txt
src/pico_ssd1306_i2c/src/: ssd1306_i2c.c
src/pico_ssd1306_i2c/src/include/pico/: ssd1306_i2c.h
src/pico_st7789/: CMakeLists.txt
src/pico_st7789/src/: st7789.c
src/pico_st7789/src/include/: icm20948.h
src/pico_st7789/src/include/pico/: st7789.h
src/whd_gen/: statsomizer.h  whd_gen.cpp
